...
    <!--Open form button -->
    <ImageButton
        android:id="@+id/add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_proprietor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_room"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/enter_npa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <EditText
                            android:id="@+id/enter_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_utilities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_deposit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_beds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_area"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                    <EditText
                        android:id="@+id/enter_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/enter_images"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/add_submit"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
...
