...
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_icon"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add_icon"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites_icon"
...
